# goit-algo-fp

./: README.md  pyproject.toml
task_01/: linked_list.py
task_01/tests/: test_linked_list.py
task_02/: __main__.py  geometry.py  pythagoras_tree.py  static_render.py  styling.py
task_03/: demo.py  dijkstra.py  graph.py
task_03/tests/: test_dijkstra.py  test_graph.py
task_04/: demo.py  heap_tree.py
task_04/tests/: test_heap_tree.py
task_05/: demo.py  traversal.py
task_05/tests/: test_traversal.py
task_06/: demo.py  knapsack.py
task_06/tests/: test_knapsack.py
task_07/: demo.py  monte_carlo.py
task_07/tests/: test_monte_carlo.py
