[project]
name = "goit-algo-fp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pythagoras-tree = "task_02.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_01", "task_02"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
