[project]
name = "goit-algo-fp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
]

[project.scripts]
pythagoras-tree = "task_02.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_01", "task_02", "task_03", "task_04"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
